#9 Updated MainMenu, added missig type and fixed example formatting in TimeSpan

--- a/docs/api-reference/CRMScript.Native.MainMenu.yml
+++ b/docs/api-reference/CRMScript.Native.MainMenu.yml
@@ -3,11 +3,15 @@ items:
 - uid: CRMScript.Native.MainMenu
   commentId: T:CRMScript.Native.MainMenu
   id: MainMenu
-  so.intellisense: Void.MainMenu
   langs:
   - crmscript
   children:
+  - CRMScript.Native.MainMenu.addGroup(String,String)
+  - CRMScript.Native.MainMenu.addGroup(String,String,Integer)
   - CRMScript.Native.MainMenu.addGroup(String,String,Integer,String)
+  - CRMScript.Native.MainMenu.addItem(String,String)
+  - CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer)
+  - CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String)
   - CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String,String)
   - CRMScript.Native.MainMenu.clear()
   - CRMScript.Native.MainMenu.deleteGroup(Integer)
@@ -22,8 +26,61 @@ items:
   nameWithType: MainMenu
   fullName: CRMScript.Native.MainMenu
   type: Class
-  summary: "\nThe CRMScript<strong>MainMenu</strong>class is used to control the main (left-side) menu of SuperOffice CRM. Customizing the main menu means modifying the corresponding<strong>trigger</strong>.\n"
+  summary: "\nUsed to control the main (left-side) menu of SuperOffice CRM. Customizing the main menu means modifying the corresponding trigger.\n"
   example: 
+- uid: CRMScript.Native.MainMenu.addGroup(String,String)
+  commentId: M:CRMScript.Native.MainMenu.addGroup(String,String)
+  id: 'addGroup(String,String)'
+  so.intellisense: MainMenu.addGroup
+  langs:
+  - crmscript
+  name: 'addGroup(String,String)'
+  nameWithType: MainMenu.addGroup(String,String)
+  fullName: CRMScript.Native.MainMenu.addGroup(String,String)
+  type: Method
+  summary: "\nAdds a group to the main menu (navigator) with the given label and image. By default, it appends the item to the bottom of the main menu. Use one of the other addGroup variants to specify the exact position or on-click JavaScript code.\n"
+  remarks: "\nThe image is specified by the URL to the actual file.\n"
+  syntax: 
+    content: Void addGroup(String label, String image)
+    parameters:
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the group
+    - id: image
+      type: CRMScript.Global.String
+      description: URL to the actual file
+    return:
+      type: CRMScript.Global.Void
+  example: 
+  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label&quot;, &quot;http://..../graphics/picture.png&quot;);</code></pre>\n"
+- uid: CRMScript.Native.MainMenu.addGroup(String,String,Integer)
+  commentId: M:CRMScript.Native.MainMenu.addGroup(String,String,Integer)
+  id: 'addGroup(String,String,Integer)'
+  so.intellisense: MainMenu.addGroup
+  langs:
+  - crmscript
+  name: 'addGroup(String,String,Integer)'
+  nameWithType: MainMenu.addGroup(String,String,Integer)
+  fullName: CRMScript.Native.MainMenu.addGroup(String,String,Integer)
+  type: Method
+  summary: "\nAdds a group to the main menu (navigator) with the given label and image in a specific position. This will shift the index of all subsequent groups. Thus, you should not make assumptions about which slot a group is in.\n"
+  remarks: "\nThe image is specified by the URL to the actual file.\n"
+  syntax: 
+    content: Void addGroup(String label, String image, Integer position)
+    parameters:
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the group
+    - id: image
+      type: CRMScript.Global.String
+      description: URL to the actual file
+    - id: position
+      type: CRMScript.Global.Integer
+      description: The position inside the menu of this group
+    return:
+      type: CRMScript.Global.Void
+  example: 
+  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label2&quot;, &quot;http://..../graphics/picture.png&quot;, 3);</code></pre>Add the following javascript code: <code>&quot;window.location='http://www.superoffice.com'&quot;</code>\n"
 - uid: CRMScript.Native.MainMenu.addGroup(String,String,Integer,String)
   commentId: M:CRMScript.Native.MainMenu.addGroup(String,String,Integer,String)
   id: 'addGroup(String,String,Integer,String)'
@@ -34,27 +91,123 @@ items:
   nameWithType: MainMenu.addGroup(String,String,Integer,String)
   fullName: CRMScript.Native.MainMenu.addGroup(String,String,Integer,String)
   type: Method
-  summary: "\nAdds a group to the main menu (navigator)with the given label and image. By default, it appends the item to the bottom of the main menu.<p></p>\nThe image is specified by the URL to the actual file.<p></p>\nYou can optionally specify the exact position. This will shift the index of all subsequent groups. Thus, you should not make assumptions about which slot a group is in.<p></p>\nIn addition, you can specify on-click JavaScript code. Use this to create clickable menu groups.\n"
-  remarks: 
+  summary: "\nAdds a group to the main menu (navigator) with the given label and image in a specific position. This will shift the index of all subsequent groups. Thus, you should not make assumptions about which slot a group is in.<p></p>\nIn addition, you can specify on-click JavaScript code. Use this to create clickable menu groups.\n"
+  remarks: "\nThe image is specified by the URL to the actual file.\n"
   syntax: 
-    content: Void addGroup(String label, String image)
+    content: Void addGroup(String label, String image, Integer position, String onClick)
     parameters:
     - id: label
       type: CRMScript.Global.String
-      description: 
+      description: The label of the group
     - id: image
       type: CRMScript.Global.String
-      description: 
+      description: URL to the actual file
     - id: position
       type: CRMScript.Global.Integer
-      description: Optional. The position inside the menu of this group
+      description: The position inside the menu of this group
     - id: onClick
       type: CRMScript.Global.String
-      description: Optional. JavaScript that is executed when clicking the group
+      description: JavaScript that is executed when clicking the group
     return:
       type: CRMScript.Global.Void
   example: 
-  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label&quot;, &quot;http://..../graphics/picture.png&quot;);\nmenu.addGroup(&quot;My label2&quot;, &quot;http://..../graphics/picture.png, 3&quot;);</code></pre>\n"
+  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addGroup(&quot;My label&quot;, &quot;http://..../graphics/picture.png&quot;);\nmenu.addGroup(&quot;My label2&quot;, &quot;http://..../graphics/picture.png&quot;, 3, &quot;window.location='http://www.superoffice.com'&quot;);</code></pre>\n"
+- uid: CRMScript.Native.MainMenu.addItem(String,String)
+  commentId: M:CRMScript.Native.MainMenu.addItem(String,String)
+  id: 'addItem(String,String)'
+  so.intellisense: MainMenu.addItem
+  langs:
+  - crmscript
+  name: 'addItem(String,String)'
+  nameWithType: MainMenu.addItem(String,String)
+  fullName: CRMScript.Native.MainMenu.addItem(String,String)
+  type: Method
+  summary: "\nAdds an item to the SuperOffice main menu (navigator).\n"
+  remarks: ""
+  syntax: 
+    content: Void addItem(String label, String url)
+    parameters:
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the menu item
+    - id: url
+      type: CRMScript.Global.String
+      description: 
+    return:
+      type: CRMScript.Global.Void
+  example: 
+  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
+- uid: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer)
+  commentId: M:CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer)
+  id: 'addItem(String,String,Integer,Integer)'
+  so.intellisense: MainMenu.addItem
+  langs:
+  - crmscript
+  name: 'addItem(String,String,Integer,Integer)'
+  nameWithType: MainMenu.addItem(String,String,Integer,Integer,)
+  fullName: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer)
+  type: Method
+  summary: "\nAdds an item to the SuperOffice main menu (navigator).\n"
+  remarks: ""
+  syntax: 
+    content: Void addItem(String label, String url, Integer group, Integer position)
+    parameters:
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the menu item
+    - id: url
+      type: CRMScript.Global.String
+      description: 
+    - id: group
+      type: CRMScript.Global.Integer
+      description: Optional. Which header this item belongs to
+    - id: position
+      type: CRMScript.Global.Integer
+      description: Optional. The position inside the group of this item
+    return:
+      type: CRMScript.Global.Void
+  example: 
+  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
+- uid: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String)
+  commentId: M:CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String)
+  id: 'addItem(String,String,Integer,Integer,String,String,String)'
+  so.intellisense: MainMenu.addItem
+  langs:
+  - crmscript
+  name: 'addItem(String,String,Integer,Integer,String,String,String)'
+  nameWithType: MainMenu.addItem(String,String,Integer,Integer,String,String,String)
+  fullName: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String)
+  type: Method
+  summary: "\nAdds an item to the SuperOffice main menu (navigator).\n"
+  remarks: ""
+  syntax: 
+    content: Void addItem(String label, String url, Integer group, Integer position, String onClick, String itemId, String target)
+    parameters:
+    - id: label
+      type: CRMScript.Global.String
+      description: The label of the menu item
+    - id: url
+      type: CRMScript.Global.String
+      description: 
+    - id: group
+      type: CRMScript.Global.Integer
+      description: Optional. Which header this item belongs to
+    - id: position
+      type: CRMScript.Global.Integer
+      description: Optional. The position inside the group of this item
+    - id: onClick
+      type: CRMScript.Global.String
+      description: Optional. JavaScript that is executed when clicking the item
+    - id: itemId
+      type: CRMScript.Global.String
+      description: Optional. A programmatic ID for the item
+    - id: target
+      type: CRMScript.Global.String
+      description: Optional. The target attribute of the link
+    return:
+      type: CRMScript.Global.Void
+  example: 
+  - "\n<pre><code>MainMenu menu = getMainMenu();\nmenu.addItem(&quot;List equipment&quot;, getProgram(1) + &quot;&amp;action=listExtraTable&amp;extraTable=y_equipment&quot;);\n\nmenu.addItem(&quot;New unit&quot;, getProgram(1) + &quot;&amp;action=editExtraTableEntry&amp;extraTable=y_equipment&quot;, 1, 1);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String,String)
   commentId: M:CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String,String)
   id: 'addItem(String,String,Integer,Integer,String,String,String,String)'
@@ -65,10 +218,10 @@ items:
   nameWithType: MainMenu.addItem(String,String,Integer,Integer,String,String,String,String)
   fullName: CRMScript.Native.MainMenu.addItem(String,String,Integer,Integer,String,String,String,String)
   type: Method
-  summary: "\nCRMScript method in class MainMenu that adds an item to the SuperOffice main menu (navigator)Adds an item to the main menu (navigator). By default, it appends an item to the last (bottom) group of the main menu.<p></p>\nThe image is specified by the URL to the actual file.<p></p>\nYou can optionally specify the exact position. This will shift the index of all subsequent items (if any). Thus, you should not make assumptions about which slot an item is in.<p></p>\nIn addition, you can specify JavaScript to run when the item is clicked and set a custom icon.\n"
-  remarks: 
+  summary: "\nAdds an item to the SuperOffice main menu (navigator).\n"
+  remarks: "\nThe image is specified by the URL to the actual file.\n"
   syntax: 
-    content: Void addItem()
+    content: Void addItem(String label, String url, Integer group, Integer position, String onClick, String itemId, String target, String iconUrl)
     parameters:
     - id: label
       type: CRMScript.Global.String
@@ -108,11 +261,11 @@ items:
   nameWithType: MainMenu.clear()
   fullName: CRMScript.Native.MainMenu.clear()
   type: Method
-  summary: 
+  summary: "\nClears all the contents of the menu.\n"
   remarks: 
   syntax: 
     content: Void clear()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Void
   example: 
@@ -126,15 +279,16 @@ items:
   nameWithType: MainMenu.deleteGroup(Integer)
   fullName: CRMScript.Native.MainMenu.deleteGroup(Integer)
   type: Method
-  summary: "\ndeleteGroup(Integer position)<p></p>\nRemoves the group at the given index from the main menu.<p></p>\n[!TIP]
-Verify that you're removing the correct group by checking with<code>getGroupId()</code>what's in that slot first.<p></p>\n<pre><code>Integer pos = 3;\nMainMenu menu = getMainMenu();\nif (menu.getGroupId(pos) == &quot;my label&quot;) {\n  menu.deleteGroup(pos);\n}</code></pre>[!TIP]\n"
-  remarks: 
+  summary: "\nRemoves the group at the given index (starts at 0) from the main menu.\n"
+  remarks: "\nVerify that you're removing the correct group by checking with getGroupId() what's in that slot first.\n"
   syntax: 
-    content: deleteGroup(Integer index)
+    content: Void deleteGroup(Integer index)
     parameters:
     - id: index
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>Integer pos = 3;\nMainMenu menu = getMainMenu();\nif (menu.getGroupId(pos) == &quot;my label&quot;) {\n  menu.deleteGroup(pos);\n}</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.deleteItem(Integer,Integer)
@@ -171,8 +325,8 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
   nameWithType: MainMenu.getGroupId(Integer)
   fullName: CRMScript.Native.MainMenu.getGroupId(Integer)
   type: Method
-  summary: "\nReturns the label (ID) of a group in the main menu given its position. The IDs are unique strings.<p></p>\n<pre><code>MainMenu menu = getMainMenu();\nString label = menu.getGroupId(4);</code></pre>\n"
-  remarks: 
+  summary: "\nReturns the label (ID) of a group in the main menu given its position.\n"
+  remarks: "The IDs are unique strings starting at zero.\n"
   syntax: 
     content: String getGroupId(Integer group)
     parameters:
@@ -193,13 +347,17 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
   nameWithType: MainMenu.getGroupIndex()
   fullName: CRMScript.Native.MainMenu.getGroupIndex()
   type: Method
-  summary: "\nReturns the position of a specific group in the main menu given its label (ID)<p></p>\n<pre><code>MainMenu menu = getMainMenu();\nInteger pos = menu.getGroupIndex(&quot;my MITs&quot;);</code></pre>[!TIP]\n"
+  summary: "\nReturns the position of a specific group in the main menu given its label (ID)\n"
   remarks: 
   syntax: 
-    content: Integer getGroupIndex(String)
+    content: Integer getGroupIndex(String label)
     parameters:
+    - id: label
+      type: CRMScript.Global.String
+      description: Group label (ID)
     return:
       type: CRMScript.Global.Integer
+      description: the position of a specific group in the main menu
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nInteger pos = menu.getGroupIndex(&quot;my MITs&quot;);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.getItemId(Integer,Integer)
@@ -212,7 +370,7 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
   nameWithType: MainMenu.getItemId(Integer,Integer)
   fullName: CRMScript.Native.MainMenu.getItemId(Integer,Integer)
   type: Method
-  summary: "\nReturns the label (ID) of an item in a group given its position.<p></p>\n<pre><code>MainMenu menu = getMainMenu();\nString label = menu.getItemId(4,1);</code></pre>\n"
+  summary: "\nReturns the label (ID) of an item in a group given its position.\n"
   remarks: 
   syntax: 
     content: String getItemId(Integer group, Integer pos)
@@ -225,6 +383,7 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
       description: 
     return:
       type: CRMScript.Global.String
+      description: the label (ID) of an item
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nString label = menu.getItemId(4,1);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.getItemIndex(Integer,String)
@@ -237,7 +396,7 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
   nameWithType: MainMenu.getItemIndex(Integer,String)
   fullName: CRMScript.Native.MainMenu.getItemIndex(Integer,String)
   type: Method
-  summary: "\nReturns the position of a specific item in the group given its label (ID)<p></p>\n<pre><code>MainMenu menu = getMainMenu();\nInteger pos = menu.getItemIndex(2,&quot;secret company&quot;);</code></pre>[!TIP]\n"
+  summary: "\nReturns the position of a specific item in the group given its label (ID).\n"
   remarks: 
   syntax: 
     content: Integer getItemIndex(Integer group, String label)
@@ -250,6 +409,7 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
       description: 
     return:
       type: CRMScript.Global.Integer
+      description: the position of a specific item
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nInteger pos = menu.getItemIndex(2,&quot;secret company&quot;);</code></pre>\n"
 - uid: CRMScript.Native.MainMenu.getNumGroups()
@@ -262,11 +422,11 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
   nameWithType: MainMenu.getNumGroups()
   fullName: CRMScript.Native.MainMenu.getNumGroups()
   type: Method
-  summary: "\nReturns the current number of groups in the main menu.<p></p>\n<pre><code>MainMenu menu = getMainMenu();\nInteger nGroups = menu.getNumGroups();</code></pre>\n"
+  summary: "\nReturns the current number of groups in the main menu.\n"
   remarks: 
   syntax: 
     content: Integer getNumGroups()
-    parameters:
+    parameters: []
     return:
       type: CRMScript.Global.Integer
   example: 
@@ -281,16 +441,17 @@ Verify that you're removing the correct group by checking with<code>getGroupId()
   nameWithType: MainMenu.getNumItems(Integer)
   fullName: CRMScript.Native.MainMenu.getNumItems(Integer)
   type: Method
-  summary: "\nReturns the current number of items in the group.<p></p>\n<pre><code>MainMenu menu = getMainMenu();\nInteger nItems = menu.getNumItems(2);</code></pre>\n"
+  summary: "\nReturns the current number of items in the group.\n"
   remarks: 
   syntax: 
     content: Integer getNumItems(Integer group)
     parameters:
     - id: group
       type: CRMScript.Global.Integer
-      description: 
+      description: The group
     return:
       type: CRMScript.Global.Integer
+      description: The number of items in the group 
   example: 
   - "\n<pre><code>MainMenu menu = getMainMenu();\nInteger nItems = menu.getNumItems(2);</code></pre>\n"
 references:
