--- a/docs/api-reference/CRMScript.Native.TimeSpan.yml
+++ b/docs/api-reference/CRMScript.Native.TimeSpan.yml
@@ -433,7 +433,8 @@ items:
     return:
       type: CRMScript.Global.String
       description: A string representation of the timespan, on the given format and in the given language.
-  example: "\n<pre><code>TimeSpan ts;\nprintLine(ts.toString(3,1,1,false));</code></pre>\n"
+  example: 
+  - "\n<pre><code>TimeSpan ts;\nprintLine(ts.toString(3,1,1,false));</code></pre>\n"
 references:
 - uid: CRMScript.Native.TimeSpan
   commentId: T:CRMScript.Native.TimeSpan
@@ -453,3 +454,9 @@ references:
   name: Bool
   nameWithType: Bool
   fullName: CRMScript.Global.Bool
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
